(feat) add ability to delete results
closes #218
